# hw-aws-sqs-conduit

./: README.md  circle.yml  hw-aws-sqs-conduit.cabal  package.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
src/HaskellWorks/Aws/Sqs/: Conduit.hs
