name:                   hw-aws-sqs-conduit
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/hw-aws-sqs-conduit#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2017 John Ky
category:               Web
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Aws.Sqs.Conduit
  build-depends:        base >= 4.7 && < 5
                      , amazonka
                      , amazonka-sqs
                      , conduit
                      , lens
                      , mtl
                      , text
  default-language:     Haskell2010

test-suite hw-aws-sqs-conduit-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , hw-aws-sqs-conduit
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw-aws-sqs-conduit
